Mark `DeliveryTest` as slow for separate execution

--- a/build.gradle
+++ b/build.gradle
@@ -196,6 +196,7 @@ subprojects {
     }
 
     apply from: deps.scripts.testOutput
+    apply from: deps.scripts.slowTests
     apply from: deps.scripts.javadocOptions
     
     task sourceJar(type: Jar) {
