--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
   - chmod 600 deploy_key_rsa
 
 script:
-  - ./gradlew check slowTest --stacktrace
+  - ./gradlew check allTest --stacktrace
 
   # The publishing script should be executed in `script` section in order to
   # fail the Travis build if execution of this script is failed.
