--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ build_script:
   - gradlew assemble --stacktrace
 
 test_script:
-  - gradlew check allTest --stacktrace
+  - gradlew check --stacktrace
 
 after_build:
   # upload test results via rest-api
