--- a/server/build.gradle
+++ b/server/build.gradle
@@ -21,12 +21,12 @@
 dependencies {
     compile project(path: ':client')
 
-    implementation deps.grpc.grpcNetty
     implementation deps.grpc.grpcProtobuf
-    
+
     testAnnotationProcessor deps.build.autoService.processor
     testCompileOnly deps.build.autoService.annotations
 
+    testImplementation deps.grpc.grpcNetty
     testImplementation "io.spine:spine-testlib:$spineBaseVersion"
     testImplementation project(path: ":core", configuration: 'testArtifacts')
     testImplementation project(path: ":client", configuration: 'testArtifacts')
