--- a/testutil-server/build.gradle
+++ b/testutil-server/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile project(path: ':server')
 
     api project(path: ':testutil-client')
+    testImplementation deps.grpc.grpcNetty
     testImplementation project(path: ':testutil-client', configuration: 'testArtifacts')
 }
 
