Delete a duplicate script and use the script from `config`

--- a/client/build.gradle
+++ b/client/build.gradle
@@ -31,5 +31,4 @@ dependencies {
 }
 
 apply from: deps.scripts.testArtifacts
-
-apply from: "$rootDir/gradle/assemble-proto.gradle"
+apply from: deps.scripts.publishProto
