--- a/server/build.gradle
+++ b/server/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 }
 
 apply from: deps.scripts.testArtifacts
+apply from: deps.scripts.publishProto
 
 // Copies the documentation files to the Javadoc output folder.
 // Inspired by https://discuss.gradle.org/t/do-doc-files-work-with-gradle-javadoc/4673
