--- a/version.gradle
+++ b/version.gradle
@@ -32,8 +32,8 @@ ext {
     versionToPublish = SPINE_VERSION
 
     // Depend on `base` for the general definitions and a model compiler.
-    spineBaseVersion = '1.0.1'
+    spineBaseVersion = '1.0.2-SNAPSHOT'
 
     // Depend on `time` for `ZoneId`, `ZoneOffset` and other date/time types and utilities.
-    spineTimeVersion = '1.0.1'
+    spineTimeVersion = '1.0.2-SNAPSHOT'
 }
