--- a/version.gradle
+++ b/version.gradle
@@ -29,11 +29,11 @@ def final SPINE_VERSION = '1.0.3'
 
 ext {
     // The version of the modules in this project.
-    versionToPublish = SPINE_VERSION
+    versionToPublish = '1.0.8-SNAPSHOT'
 
     // Depend on `base` for the general definitions and a model compiler.
-    spineBaseVersion = SPINE_VERSION
+    spineBaseVersion = '1.0.8-SNAPSHOT'
 
     // Depend on `time` for `ZoneId`, `ZoneOffset` and other date/time types and utilities.
-    spineTimeVersion = SPINE_VERSION
+    spineTimeVersion = '1.0.3'
 }
