--- a/version.gradle
+++ b/version.gradle
@@ -25,8 +25,6 @@
  *  as we want to manage the versions in a single source.
  */
 
-def final SPINE_VERSION = '1.0.3'
-
 ext {
     // The version of the modules in this project.
     versionToPublish = '1.0.8-SNAPSHOT'
@@ -35,5 +33,5 @@ ext {
     spineBaseVersion = '1.0.8-SNAPSHOT'
 
     // Depend on `time` for `ZoneId`, `ZoneOffset` and other date/time types and utilities.
-    spineTimeVersion = '1.0.3'
+    spineTimeVersion = '1.0.8-SNAPSHOT'
 }
