Remove Mockito from `model-assembler` and `model-verifier`

--- a/model/model-assembler/build.gradle
+++ b/model/model-assembler/build.gradle
@@ -26,4 +26,6 @@ group 'io.spine.tools'
 
 dependencies {
     implementation project(':server')
+
+    testImplementation "io.spine:spine-testlib:$spineBaseVersion"
 }
