--- a/version.gradle
+++ b/version.gradle
@@ -25,7 +25,7 @@
  *  as we want to manage the versions in a single source.
  */
 
-final def spineVersion = '1.1.0'
+final def spineVersion = '1.1.1-SNAPSHOT'
 
 ext {
     // The version of the modules in this project.
