--- a/version.gradle
+++ b/version.gradle
@@ -25,15 +25,15 @@
  *  as we want to manage the versions in a single source.
  */
 
-final def spineVersion = '1.1.1-SNAPSHOT'
+final def spineVersion = '1.1.1-SNAPSHOT+1'
 
 ext {
     // The version of the modules in this project.
     versionToPublish = spineVersion
 
     // Depend on `base` for the general definitions and a model compiler.
-    spineBaseVersion = spineVersion
+    spineBaseVersion = '1.1.0'
 
     // Depend on `time` for `ZoneId`, `ZoneOffset` and other date/time types and utilities.
-    spineTimeVersion = spineVersion
+    spineTimeVersion = '1.1.0'
 }
