Remove OkHttp dependency from the client, add Netty Shaded for tests
Also:
  * Added `grpc-core` client dependency which is needed for in-process
    gRPC implementation.

--- a/client/build.gradle
+++ b/client/build.gradle
@@ -23,8 +23,8 @@ dependencies {
     api deps.grpc.grpcStub
 
     implementation (
-            deps.grpc.grpcOkHttp,
-            deps.grpc.grpcProtobuf
+            deps.grpc.grpcProtobuf,
+            deps.grpc.grpcCore
     )
 
     testImplementation(
@@ -32,6 +32,7 @@ dependencies {
             project(path: ":testutil-client"),
             project(path: ":core", configuration: 'testArtifacts'),
             project(path: ":server"), // for testing io.spine.client
+            deps.grpc.grpcNettyShaded
     )
 }
 
