Update dependency report

--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@ all modules and does not describe the project structure per-subproject.
   </dependency>
   <dependency>
     <groupId>io.grpc</groupId>
-    <artifactId>grpc-okhttp</artifactId>
+    <artifactId>grpc-core</artifactId>
     <version>1.24.1</version>
     <scope>compile</scope>
   </dependency>
@@ -118,6 +118,12 @@ all modules and does not describe the project structure per-subproject.
   <dependency>
     <groupId>io.grpc</groupId>
     <artifactId>grpc-netty</artifactId>
+    <version>1.24.1</version>
+    <scope>test</scope>
+  </dependency>
+  <dependency>
+    <groupId>io.grpc</groupId>
+    <artifactId>grpc-netty-shaded</artifactId>
     <version>1.24.1</version>
     <scope>test</scope>
   </dependency>
