Depend on Netty Shaded
... instead of Netty to avoid the TSL provider error.

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     testCompileOnly deps.build.autoService.annotations
 
     testImplementation (
-            deps.grpc.grpcNetty,
+            deps.grpc.grpcNettyShaded,
             "io.spine:spine-testlib:$spineBaseVersion",
             project(path: ":core", configuration: 'testArtifacts'),
             project(path: ":client", configuration: 'testArtifacts'),
