--- a/server/build.gradle
+++ b/server/build.gradle
@@ -19,7 +19,7 @@
  */
 
 dependencies {
-    compile project(path: ':client')
+    compile project(':client')
 
     implementation(
             deps.grpc.grpcProtobuf,
@@ -32,9 +32,9 @@ dependencies {
     testImplementation (
             deps.grpc.grpcNettyShaded,
             "io.spine:spine-testlib:$spineBaseVersion",
-            project(path: ":core", configuration: 'testArtifacts'),
-            project(path: ":client", configuration: 'testArtifacts'),
-            project(path: ":testutil-server")
+            project(path: ':core', configuration: 'testArtifacts'),
+            project(path: ':client', configuration: 'testArtifacts'),
+            project(':testutil-server')
     )
 }
 
