--- a/server/build.gradle
+++ b/server/build.gradle
@@ -19,18 +19,20 @@
  */
 
 dependencies {
-    compile project(path: ':client')
-
-    implementation deps.grpc.grpcProtobuf
-
+    compile project(':client')
+    implementation(
+            deps.grpc.grpcProtobuf,
+            deps.grpc.grpcCore
+    )
     testAnnotationProcessor deps.build.autoService.processor
     testCompileOnly deps.build.autoService.annotations
-
-    testImplementation deps.grpc.grpcNetty
-    testImplementation "io.spine:spine-testlib:$spineBaseVersion"
-    testImplementation project(path: ":core", configuration: 'testArtifacts')
-    testImplementation project(path: ":client", configuration: 'testArtifacts')
-    testImplementation project(path: ":testutil-server")
+    testImplementation(
+            deps.grpc.grpcNettyShaded,
+            "io.spine:spine-testlib:$spineBaseVersion",
+            project(path: ':core', configuration: 'testArtifacts'),
+            project(path: ':client', configuration: 'testArtifacts'),
+            project(':testutil-server')
+    )
 }
 
 apply from: deps.scripts.testArtifacts
