--- a/version.gradle
+++ b/version.gradle
@@ -25,11 +25,11 @@
  *  as we want to manage the versions in a single source.
  */
 
-final def spineVersion = '1.2.2'
+final def spineVersion = '1.2.1'
 
 ext {
     // The version of the modules in this project.
-    versionToPublish = spineVersion
+    versionToPublish = '1.2.2'
 
     // Depend on `base` for the general definitions and a model compiler.
     spineBaseVersion = spineVersion
