--- a/version.gradle
+++ b/version.gradle
@@ -29,7 +29,7 @@ final def spineVersion = '1.2.3'
 
 ext {
     // The version of the modules in this project.
-    versionToPublish = '1.2.2'
+    versionToPublish = spineVersion
 
     // Depend on `base` for the general definitions and a model compiler.
     spineBaseVersion = spineVersion
