Migrate to the new base

--- a/build.gradle
+++ b/build.gradle
@@ -105,6 +105,10 @@ subprojects {
     apply from: deps.scripts.modelCompiler
     apply from: deps.scripts.projectLicenseReport
 
+    modelCompiler {
+        generateValidation = true
+    }
+
     // Specific setup for a Travis build,
     // which prevents appearing of warning messages in build logs.
     //
