--- a/core/build.gradle
+++ b/core/build.gradle
@@ -19,8 +19,8 @@
  */
 
 dependencies {
-    compile "io.spine:spine-base:$spineBaseVersion"
-    compile "io.spine:spine-time:$spineTimeVersion"
+    api "io.spine:spine-base:$spineBaseVersion"
+    api "io.spine:spine-time:$spineTimeVersion"
 
     testImplementation project(path: ":testutil-core")
     testImplementation "io.spine:spine-testutil-time:$spineTimeVersion"
