--- a/testutil-client/build.gradle
+++ b/testutil-client/build.gradle
@@ -19,7 +19,7 @@
  */
 
 dependencies {
-    compile project(path: ':client')
+    api project(path: ':client')
     
     implementation deps.grpc.grpcProtobuf
     api project(path: ':testutil-core')
