--- a/testutil-core/build.gradle
+++ b/testutil-core/build.gradle
@@ -19,7 +19,7 @@
  */
 
 dependencies {
-    compile project(path: ':client')
+    api project(path: ':client')
 
     // Depend on JUnit in the production part of the code, as this module exposes testing utilities
     // that are based on JUnit.
