Document the additional field generation configurations

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -28,7 +28,12 @@ dependencies {
 
 modelCompiler {
     fields {
+        // Enable the strongly-typed fields generation for `spine.core.Event` as currently it's
+        // a queryable entity state.
         generateFor "spine.core.Event", markAs("io.spine.base.EntityStateField")
+
+        // Enable the strongly-typed fields generation for `spine.core.EventContext` to allow
+        // creation of typed event filters based on context.
         generateFor "spine.core.EventContext", markAs("io.spine.core.EventContextField")
     }
 }
