--- a/core/build.gradle
+++ b/core/build.gradle
@@ -33,7 +33,7 @@ modelCompiler {
         generateFor "spine.core.Event", markAs("io.spine.base.EntityStateField")
 
         // Enable the strongly-typed fields generation for `spine.core.EventContext` to allow
-        // creation of typed event filters based on context.
+        // creation of typed event filters based on event context.
         generateFor "spine.core.EventContext", markAs("io.spine.core.EventContextField")
     }
 }
