Fix Time version

--- a/version.gradle
+++ b/version.gradle
@@ -35,5 +35,5 @@ ext {
     spineBaseVersion = spineVersion
 
     // Depend on `time` for `ZoneId`, `ZoneOffset` and other date/time types and utilities.
-    spineTimeVersion = spineVersion
+    spineTimeVersion = '1.5.0'
 }
