--- a/model/model-assembler/build.gradle
+++ b/model/model-assembler/build.gradle
@@ -19,7 +19,7 @@
  */
 
 buildscript {
-    apply from: "$rootDir/version.gradle"
+    apply from: "$rootDir/version.gradle.kts"
 }
 
 group 'io.spine.tools'
