--- a/model/model-verifier/src/test/resources/build.gradle
+++ b/model/model-verifier/src/test/resources/build.gradle
@@ -31,12 +31,12 @@ buildscript {
     // Apply shared dependencies.
     apply from: "$enclosingRootDir/config/gradle/dependencies.gradle"
 
-    // Applying from `version.gradle` inside the `buildscript` section to reuse the properties.
+    // Applying from `version.gradle.kts` inside the `buildscript` section to reuse the properties.
     //
     // As long as `buildscript` section is always evaluated first, we need to apply
-    // `version.gradle` explicitly here.
+    // `version.gradle.kts` explicitly here.
     //
-    apply from: "$enclosingRootDir/version.gradle"
+    apply from: "$enclosingRootDir/version.gradle.kts"
 
     repositories {
         mavenLocal()
@@ -81,7 +81,7 @@ apply plugin: 'io.spine.tools.spine-model-compiler'
 apply plugin: 'io.spine.tools.spine-model-verifier'
 
 // NOTE: this file is copied from the root project in the test setup.
-apply from: "$enclosingRootDir/version.gradle"
+apply from: "$enclosingRootDir/version.gradle.kts"
 apply from: "$enclosingRootDir/config/gradle/model-compiler.gradle"
 
 repositories {
