--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@ all modules and does not describe the project structure per-subproject.
 
 <groupId>io.spine</groupId>
 <artifactId>spine-core-java</artifactId>
-<version>1.6.0</version>
+<version>2.0.0-jdk8.SNAPSHOT.1</version>
 
 <inceptionYear>2015</inceptionYear>
 
