--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_install:
   - chmod +x config/scripts/register-ssh-key.sh
   - chmod +x ./config/scripts/publish-artifacts.sh
   # Decrypt and un-archive Maven and Google Cloud credentials and an RSA private key (deploy_key_rsa).
+  # See also: https://github.com/SpineEventEngine/SpineEventEngine.github.io/wiki/Encrypting-credential-files-for-Travis
   - openssl aes-256-cbc -K $encrypted_e308efbe7a9a_key -iv $encrypted_e308efbe7a9a_iv -in credentials.tar.enc -out credentials.tar -d
   - tar xvf credentials.tar
   - chmod 600 deploy_key_rsa
