--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@ all modules and does not describe the project structure per-subproject.
 
 <groupId>io.spine</groupId>
 <artifactId>spine-core-java</artifactId>
-<version>2.0.0-jdk8.SNAPSHOT.8</version>
+<version>2.0.0-jdk8.SNAPSHOT.9</version>
 
 <inceptionYear>2015</inceptionYear>
 
@@ -95,6 +95,18 @@ all modules and does not describe the project structure per-subproject.
     <groupId>org.checkerframework</groupId>
     <artifactId>checker-qual</artifactId>
     <version>3.7.1</version>
+    <scope>compile</scope>
+  </dependency>
+  <dependency>
+    <groupId>org.jetbrains.kotlin</groupId>
+    <artifactId>kotlin-stdlib</artifactId>
+    <version>1.4.21</version>
+    <scope>compile</scope>
+  </dependency>
+  <dependency>
+    <groupId>org.jetbrains.kotlin</groupId>
+    <artifactId>kotlin-stdlib-jdk8</artifactId>
+    <version>1.4.21</version>
     <scope>compile</scope>
   </dependency>
   <dependency>
@@ -219,6 +231,21 @@ all modules and does not describe the project structure per-subproject.
     <groupId>org.jacoco</groupId>
     <artifactId>org.jacoco.ant</artifactId>
     <version>0.8.5</version>
+  </dependency>
+  <dependency>
+    <groupId>org.jetbrains.kotlin</groupId>
+    <artifactId>kotlin-compiler-embeddable</artifactId>
+    <version>1.4.21</version>
+  </dependency>
+  <dependency>
+    <groupId>org.jetbrains.kotlin</groupId>
+    <artifactId>kotlin-klib-commonizer-embeddable</artifactId>
+    <version>1.4.21</version>
+  </dependency>
+  <dependency>
+    <groupId>org.jetbrains.kotlin</groupId>
+    <artifactId>kotlin-scripting-compiler-embeddable</artifactId>
+    <version>1.4.21</version>
   </dependency>
 </dependencies>
 </project>
