Update version to 2.0.0-SNAPSHOT.0

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@ all modules and does not describe the project structure per-subproject.
 
 <groupId>io.spine</groupId>
 <artifactId>spine-core-java</artifactId>
-<version>1.7.1</version>
+<version>2.0.0-SNAPSHOT.0</version>
 
 <inceptionYear>2015</inceptionYear>
 
@@ -52,25 +52,37 @@ all modules and does not describe the project structure per-subproject.
   <dependency>
     <groupId>io.spine</groupId>
     <artifactId>spine-base</artifactId>
-    <version>1.7.4</version>
+    <version>2.0.0-SNAPSHOT.0</version>
     <scope>compile</scope>
   </dependency>
   <dependency>
     <groupId>io.spine</groupId>
     <artifactId>spine-time</artifactId>
-    <version>1.7.1</version>
+    <version>2.0.0-SNAPSHOT.0</version>
     <scope>compile</scope>
   </dependency>
   <dependency>
     <groupId>io.spine.tools</groupId>
     <artifactId>spine-model-compiler</artifactId>
-    <version>1.7.4</version>
+    <version>2.0.0-SNAPSHOT.0</version>
     <scope>compile</scope>
   </dependency>
   <dependency>
     <groupId>io.spine.tools</groupId>
     <artifactId>spine-plugin-base</artifactId>
-    <version>1.7.4</version>
+    <version>2.0.0-SNAPSHOT.0</version>
+    <scope>compile</scope>
+  </dependency>
+  <dependency>
+    <groupId>org.jetbrains.kotlin</groupId>
+    <artifactId>kotlin-stdlib</artifactId>
+    <version>1.4.21</version>
+    <scope>compile</scope>
+  </dependency>
+  <dependency>
+    <groupId>org.jetbrains.kotlin</groupId>
+    <artifactId>kotlin-stdlib-jdk8</artifactId>
+    <version>1.4.21</version>
     <scope>compile</scope>
   </dependency>
   <dependency>
@@ -124,25 +136,25 @@ all modules and does not describe the project structure per-subproject.
   <dependency>
     <groupId>io.spine</groupId>
     <artifactId>spine-testlib</artifactId>
-    <version>1.7.4</version>
+    <version>2.0.0-SNAPSHOT.0</version>
     <scope>test</scope>
   </dependency>
   <dependency>
     <groupId>io.spine</groupId>
     <artifactId>spine-testutil-time</artifactId>
-    <version>1.7.1</version>
+    <version>2.0.0-SNAPSHOT.0</version>
     <scope>test</scope>
   </dependency>
   <dependency>
     <groupId>io.spine.tools</groupId>
     <artifactId>spine-mute-logging</artifactId>
-    <version>1.7.4</version>
+    <version>2.0.0-SNAPSHOT.0</version>
     <scope>test</scope>
   </dependency>
   <dependency>
     <groupId>io.spine.tools</groupId>
     <artifactId>spine-plugin-testlib</artifactId>
-    <version>1.7.4</version>
+    <version>2.0.0-SNAPSHOT.0</version>
     <scope>test</scope>
   </dependency>
   <dependency>
@@ -192,12 +204,12 @@ all modules and does not describe the project structure per-subproject.
   <dependency>
     <groupId>io.spine.tools</groupId>
     <artifactId>spine-javadoc-filter</artifactId>
-    <version>1.7.4</version>
+    <version>2.0.0-SNAPSHOT.0</version>
   </dependency>
   <dependency>
     <groupId>io.spine.tools</groupId>
     <artifactId>spine-protoc-plugin</artifactId>
-    <version>1.7.4</version>
+    <version>2.0.0-SNAPSHOT.0</version>
   </dependency>
   <dependency>
     <groupId>net.sourceforge.pmd</groupId>
@@ -213,6 +225,21 @@ all modules and does not describe the project structure per-subproject.
     <groupId>org.jacoco</groupId>
     <artifactId>org.jacoco.ant</artifactId>
     <version>0.8.5</version>
+  </dependency>
+  <dependency>
+    <groupId>org.jetbrains.kotlin</groupId>
+    <artifactId>kotlin-compiler-embeddable</artifactId>
+    <version>1.4.21</version>
+  </dependency>
+  <dependency>
+    <groupId>org.jetbrains.kotlin</groupId>
+    <artifactId>kotlin-klib-commonizer-embeddable</artifactId>
+    <version>1.4.21</version>
+  </dependency>
+  <dependency>
+    <groupId>org.jetbrains.kotlin</groupId>
+    <artifactId>kotlin-scripting-compiler-embeddable</artifactId>
+    <version>1.4.21</version>
   </dependency>
 </dependencies>
 </project>
