--- a/buildSrc/src/main/groovy/filter-internal-javadoc.gradle
+++ b/buildSrc/src/main/groovy/filter-internal-javadoc.gradle
@@ -24,13 +24,33 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-package io.spine.internal.dependency
+configurations {
+    excludeInternalDoclet
+}
 
-@Suppress("unused")
-object Jackson {
-    private const val version = "2.12.3"
-    // https://github.com/FasterXML/jackson-databind
-    const val databind = "com.fasterxml.jackson.core:jackson-databind:${version}"
-    // https://github.com/FasterXML/jackson-dataformat-xml/releases
-    const val dataformatXml = "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:${version}"
+dependencies {
+    /*
+       The variable spineBaseVersion must be defined in the `ext` section of the `version.gradle`
+       file of the project which imports `config` as a sub-module.
+      */
+    excludeInternalDoclet "io.spine.tools:spine-javadoc-filter:$spineBaseVersion"
+}
+
+// This task uses constants defined in `javadoc-options.gradle`.
+task noInternalJavadoc(type: Javadoc) {
+    source = sourceSets.main.allJava.filter {
+        !it.absolutePath.contains('generated')
+    }
+    classpath = javadoc.getClasspath()
+
+    options {
+        tags = javadocOptions.tags
+        encoding = javadocOptions.encoding
+
+        // Doclet fully qualified name.
+        doclet = 'io.spine.tools.javadoc.ExcludeInternalDoclet'
+
+        // Path to the JAR containing the doclet.
+        docletpath = configurations.excludeInternalDoclet.files.asType(List)
+    }
 }
