--- a/buildSrc/src/main/groovy/license-report-common.gradle
+++ b/buildSrc/src/main/groovy/license-report-common.gradle
@@ -24,13 +24,16 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-package io.spine.internal.dependency
+/**
+ * This script defines the common configuration for license report scripts.
+ */
 
-@Suppress("unused")
-object Jackson {
-    private const val version = "2.12.3"
-    // https://github.com/FasterXML/jackson-databind
-    const val databind = "com.fasterxml.jackson.core:jackson-databind:${version}"
-    // https://github.com/FasterXML/jackson-dataformat-xml/releases
-    const val dataformatXml = "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:${version}"
-}
+apply plugin: 'base'
+
+ext.licenseReportConfig = [
+        // The output filename
+        outputFilename  : "license-report.md",
+
+        // The path to a directory, to which a per-project report is generated.
+        relativePath    : "/reports/dependency-license/dependency"
+]
